Alert håndtering + fake alerts
